--- a/_posts/2020-12-16-PLHinako.md
+++ b/_posts/2020-12-16-PLHinako.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title:  "妄想言語「Hinako」でプログラミング"
+title:  "妄想言語「Hinako」でプログラミング #喜多日菜子アドカレ2020"
 date:   2020-12-16 06:22:00 +0900
 categories: jekyll update
 ---
