--- a/_posts/2020-12-16-PLHinako.md
+++ b/_posts/2020-12-16-PLHinako.md
@@ -2,6 +2,7 @@
 layout: post
 title:  "妄想言語「Hinako」でプログラミング #喜多日菜子アドカレ2020"
 date:   2020-12-16 06:22:00 +0900
+description: 喜多日菜子が好きなので、brainf*ck系オリジナルネタ言語を作ってみた
 categories: jekyll update
 ---
 
