--- a/_posts/2020-12-16-PLHinako.md
+++ b/_posts/2020-12-16-PLHinako.md
@@ -4,8 +4,10 @@ title:  "妄想言語「Hinako」でプログラミング #喜多日菜子アド
 date:   2020-12-16 06:22:00 +0900
 description: 喜多日菜子が好きなので、brainf*ck系オリジナルネタ言語を作ってみた
 categories: jekyll update
-toc: true
 ---
+**目次**
+- TOC
+{:toc}
 
 ## はじめに
 この記事は、私の[趣味垢](https://twitter.com/ayato_nananiji)名義の投稿です。  
