--- a/_posts/2020-12-19-Mysite.md
+++ b/_posts/2020-12-19-Mysite.md
@@ -4,8 +4,10 @@ title:  "Jekyllのサイトを改造してみた"
 date:   2020-12-19 17:00:00 +0900
 description: このサイトを改造してみた
 categories: jekyll update
-toc: true
 ---
+**目次**
+- TOC
+{:toc}
 
 ## はじめに
 このサイトは[Jekyll](http://jekyllrb-ja.github.io/)という静的サイトジェネレーターで作成しています。  
