--- a/_posts/2020-12-16-PLHinako.md
+++ b/_posts/2020-12-16-PLHinako.md
@@ -4,6 +4,7 @@ title:  "妄想言語「Hinako」でプログラミング #喜多日菜子アド
 date:   2020-12-16 06:22:00 +0900
 description: 喜多日菜子が好きなので、brainf*ck系オリジナルネタ言語を作ってみた
 categories: jekyll update
+tags: 技術ネタ アイマスネタ
 ---
 **目次**
 - TOC
