--- a/_posts/2020-12-19-Mysite.md
+++ b/_posts/2020-12-19-Mysite.md
@@ -4,6 +4,7 @@ title:  "Jekyllのサイトを改造してみた"
 date:   2020-12-19 17:00:00 +0900
 description: このサイトを改造してみた
 categories: jekyll update
+tags: 技術ネタ
 ---
 **目次**
 - TOC
